Update index.html according to Text comments 20250630

--- a/index.html
+++ b/index.html
@@ -52,38 +52,50 @@
                     <img class="landing_img3" src="images/cover3_mcr20190118r1930_142.jpg"/>
                     <img class="landing_img4" src="images/cover4_mcr20190301r1930_142.jpg"/>
 
-                    <br/><p>
-                        McGill University's <span class="highlight_text">Schulich School of Music (SSoM)</span> has been one of the major institutions in Canada that nurture generations of music performers, scholars and researchers. There are currently 15 student music ensembles in the School ranging from orchestras, jazz ensembles, contemporary music ensemble, opera to choirs, and ensemble playing forms an important part of the student experience.  Amid this vast amount of performance activities, the School remains committed to <span class="highlight_text">equity, diversity and inclusion (EDI)</span> and one of the goals as stated in its <a target="_blank" href="https://www.mcgill.ca/music/about-us/equity-diversity-and-inclusion/diversity-action-plan">Diversity Action Plan</a> is to enhance the diversity of curriculum, repertoire and teaching modalities.
+                    <br/>
+                    <p>McGill University's <span class="highlight_text">Schulich School of Music (SSoM)</span> has long been one of Canada’s leading institutions for nurturing generations of music performers, scholars and researchers. With over 15 student music ensembles – including orchestras, jazz ensembles, contemporary music ensemble, opera to choirs – performance and ensemble playing are central to the student experience. Amid this rich array of performance activities, the School remains committed to <span class="highlight_text">equity, diversity and inclusion (EDI)</span> through enhancing the diversity of its curriculum, repertoire, and teaching modalities. <br/><br/>
                         
-                        <br/><br/>
-                        The performance open data and concert programs in the <a href="https://archivalcollections.library.mcgill.ca/index.php/schulich-school-of-music-performance-archive" target="_blank">Performance Archives (SSoMPA) [Collection 030 - Schulich School of Music Performance Archive]</a> were analyzed with the aim to evaluate the diversification endeavor in concert/recital programming, and examine the relationship between the latter and the impact of EDI discussion in Canadian newspapers. It is hoped that a glimpse into SSoM's EDI efforts in music performance could provide an indicative direction for its consideration as it continues its commitment in EDI and to demonstrate how digital humanities and data mining could help institutions evaluate their EDI success in designing music performance curriculum. 
-                    </p>
+                    Following the launch of <a href="https://archivalcollections.library.mcgill.ca/index.php/schulich-school-of-music-performance-archive" target="_blank">the Schulich School of Music Performance Archive (SSoMPA)</a>, information about the School’s concert and performance history has become openly accessible.  Thus this project aims to use the open data to evaluate the School’s endeavor to diversify its concert/recital programming. It also seeks to explore how these efforts aligns with the broader EDI discussions within Canadian society. It is hoped that a glimpse into SSoM's performance past could offer insights that could inform future EDI program development. Additionally, it aims to demonstrate how digital humanities and data mining can support institutions in assessing their success in designing EDI music performance curricula. </p>
+
                 </div>
 
             </section>
 
             <!------- BACKGROUND RQ ------->
             <section class="rq section" id="rq">
-                <h3 class="section-title">For a long time...</h3>
-
-                <p>Classical music has been <span class="rev-highlight_text">dominated by composers such as Mozart, Beethoven, Brahms and Copland, i.e. all white (dead) men.</span>  As <a class="rev-a" target="_blank" href="https://presserfoundation.org/harmonizing-progress-the-future-of-dei-efforts-in-classical-music">Purdon (2023)</a> writes, "it is no secret that music, particularly classical music, has struggled with diversity, equity, inclusion, access, and belonging (DEIAB) issues throughout its history".   While there have been initiatives in diversifying repertoire, many often "do not go more than a performative level of advocacy (<a class="rev-a" target="_blank" href="https://www.earlymusicamerica.org/web-articles/essay-lets-keep-idea-in-mind">Rendón, 2023</a>).  <a class="rev-a" target="_blank" href="http://rave.ohiolink.edu/etdc/view?acc_num=osu1593085683940817">Marcho (2020)</a> further reveals that conductors and directors tend to program familiar music and professional orchestra administrators and music educators <span class="rev-highlight_text">favor well-known male composers over female composers</span>.  Nonetheless, as conductors and teachers are the ones determining the repertoire for their ensembles, considerations such as the transmission of values and development of identity across all music cultures could set a good foundation for a culturally responsive pedagogy (<a class="rev-a" target="_blank" href="https://doi.org/10.1177/1321103X211066844">Cumberledge & Williams, 2023</a>).  Other ways to create lasting change in support of EDI could be through education and outreach, by fostering an environment where young musicians from diverse backgrounds can thrive, collaborating with community organizations, and reaching audiences that have been historically underrepresented in classical music (<a class="rev-a" target="_blank" href="https://presserfoundation.org/harmonizing-progress-the-future-of-dei-efforts-in-classical-music">Purdon, 2023</a>).  
-
-                <br/><br/><br/>
                 <h3 class="section-title">Evolution of EDI discussion in Canadian news</h3>
-                <p style="font-style: italic; text-align: center; margin-top: -20px;">The search period: 1 Jan 1990 - 12 Aug 2023</p>
+
+                <p>
+                    To understand how the topic of EDI evolved, all <span class="rev-highlight_text">Canadian historical and current news sources on ProQuest</span> between <span class="rev-highlight_text">Jan 1990 and August 2023</span> were data mined using <a target="_blank" style="color:#ffe76f;" href="https://tdmstudio.proquest.com/">TDM Studio</a>. The keywords and phrases used in searches included “diversity equity and inclusion” and variations of these terms and their acronyms in different orders and combinations. The longitudinal view yielded showed that:
+                </p>
+                    <ul>
+                        <li>there was <span class="rev-highlight_text">an increase</span> of <span class="realistic-marker-highlight">EDI discussion</span> in <span class="rev-highlight_text">1997-1999</span>, and</li>
+                        <li>it <span class="rev-highlight_text">grew exponentially</span> starting <span class="rev-highlight_text">2018</span>.</li>
+                    </ul>
+                <p>
+                    This observation was then compared against SSoM’s concert programming trend. It reveals that <span class="rev-highlight_text">the inclusion of works by BIPOC (Black, Indigenous, People of Color) composers</span> <span class="realistic-marker-highlight">surged earlier than</span> <span class="rev-highlight_text">the general EDI discussion in the Canadian society</span>. 
+                </p>
 
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-4 col-md-12">
-                            <div class="box info_grid"><b>Canadian news</b> on ProQuest was data mined using <a href="https://tdmstudio.proquest.com/">TDM Studio</a>. 
-                            
-                            <br/><br/>
+                            <div class="box info_grid">
                             <span style="color: #c33f40; font-style: italic; font-weight: 600;">Search strategies</span>
                             <p style="line-height: 1.3; font-size: 12px; color: #c33f40; font-style: italic;">((DEI or DEIA or EDI) and diversity) or "Diversity equity inclusion" or "diversity inclusion equity" or "Equity diversity inclusion"</p>
                         </div>
 
                             <div class="box info_grid">
-                                Comparing this with SSoM's concert programming reveals that the inclusion of works by <span style="color:#00cadc; font-weight: 600;">BIPOC (Black, Indigenous, People of Color) composers</span> surged earlier than the general EDI discussion in Canada. 
+                                <span style="color: #c33f40; font-style: italic; font-weight: 600;">Document types searched </span>
+                                <ul style="line-height: 1.3; font-size: 12px; color: #c33f40; font-style: italic;">
+                                    <li>News</li> 
+                                    <li>Commentary </li>
+                                    <li>Article </li>
+                                    <li>Feature </li>  
+                                    <li>Correspondence </li>
+                                    <li>Letter to the editor </li>
+                                    <li>Editorial </li>
+                                    <li>Font page/cover story </li>
+                                </ul>
                             </div>
                         </div>
                         <div class="col-lg-8 col-md-12">
@@ -156,6 +168,15 @@
                 <p><a class="footer_orcid rev-a" target="_blank" href="https://loading.io/">The loading icon is provided by loading.io</a></p>
         </footer>
 
+        <!------- SVG ------->
+        <svg xmlns="http://www.w3.org/2000/svg" version="1.1" class="svg-filters" style="display:none;">
+        <defs>
+            <filter id="marker-shape">
+            <feTurbulence type="fractalNoise" baseFrequency="0 0.15" numOctaves="1" result="warp" />
+            <feDisplacementMap xChannelSelector="R" yChannelSelector="G" scale="30" in="SourceGraphic" in2="warp" />
+            </filter>
+        </defs>
+        </svg>
 
         <!------- JS ------->
         <script src="js/lib/jquery-3.5.1.slim.min.js"></script>
