Update index.html - add favicon

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <meta property="og:image" content="" />
         <meta property="og:description" content="" />
 
+        <!-- "Music Note1" favicon from https://fluenticons.co/ -->
         <link rel="shortcut icon" href="images/favicon/favicon.ico" />
         <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png" />
         <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png" />
