--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <script src="js/lib/bootstrap.min.js"></script>
         <script src="js/lib/chart.js"></script> 
         <script src="js/news.js"></script>
-        <script src="js/composer.js"></script>
+        <script src="js/composers.js"></script>
         <script src="js/script.js"></script>
 
     </body>
