--- a/index.html
+++ b/index.html
@@ -115,6 +115,13 @@
                 <div id="composerBornYearChartSection"></div>
             </section>
 
+            <!-- Animated chart -->
+            <section class="section" id="composerCenturySex">
+                <div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/24112938"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/visualisation/24112938/thumbnail" width="100%" alt="bar-chart-race visualization" /></noscript></div>
+                <br/>
+                <div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/24110131"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/visualisation/24110131/thumbnail" width="100%" alt="bar-chart-race visualization" /></noscript></div>
+            </section>
+            
             <!-- SCROLL -->
             <section id="scrolly">
                 <article>
