Update index.html - add sample map chart

--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
                 <div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/24112938"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/visualisation/24112938/thumbnail" width="100%" alt="bar-chart-race visualization" /></noscript></div>
                 <br/>
                 <div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/24110131"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/visualisation/24110131/thumbnail" width="100%" alt="bar-chart-race visualization" /></noscript></div>
+                <br/>
+                <div class="flourish-embed flourish-map" data-src="visualisation/24113006"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/visualisation/24113006/thumbnail" width="100%" alt="map visualization" /></noscript></div>
             </section>
             
             <!-- SCROLL -->
